--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -73,6 +73,9 @@
         <div class="message">
           <p>הודעה חשובה #2</p>
         </div>
+        <div class="message">
+          <p>הודעה חשובה #2</p>
+        </div>
         <!-- ... Other messages ... -->
       </div>
     </div>
