--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -74,7 +74,10 @@
           <p>הודעה חשובה #2</p>
         </div>
         <div class="message">
-          <p>הודעה חשובה #2</p>
+          <p>הודעה חשובה #3</p>
+        </div>
+        <div class="message">
+          <p>הודעה חשובה #4</p>
         </div>
         <!-- ... Other messages ... -->
       </div>
