--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -34,8 +34,12 @@
       <h2 class="links-title">קישורים חשובים</h2>
       <ul class="links-list">
         <!-- Individual link items -->
-        <li><a href="http://example.com/link1" target="_blank">קישור 1</a></li>
+        <li><a href="http://srv-apps-prod/app/#/employeesmanagedashboard" target="_blank">ONNLINE </a></li>
         <li><a href="http://example.com/link2" target="_blank">קישור 2</a></li>
+        <li><a href="http://example.com/link2" target="_blank">קישור 3</a></li>
+        <li><a href="http://example.com/link2" target="_blank">קישור 4</a></li>
+        <li><a href="http://example.com/link2" target="_blank">קישור 5</a></li>
+        <li><a href="http://example.com/link2" target="_blank">קישור 6</a></li>
         <!-- Add more link items as needed -->
       </ul>
     </div>
