--- a/src/app/user-dashboard/user-dashboard.component.scss
+++ b/src/app/user-dashboard/user-dashboard.component.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 20px;
+  padding: 10px;
   box-sizing: border-box;
 }
 
@@ -30,7 +30,7 @@ mat-toolbar .welcome-message {
 .content {
   display: flex;
   width: 100%;
-  padding-top: 64px; /* Adjusted to prevent overlap with fixed header */
+  padding-top: 45px; /* Adjusted to prevent overlap with fixed header */
   box-sizing: border-box;
 }
 
@@ -79,7 +79,7 @@ table {
   overflow-y: auto; /* Scroll if content exceeds the container's height */
   width: 100%; /* Take the full width of its parent container */
   border: 2px solid #ccc;
-  padding: 5px; /* Padding inside the cards container */
+  padding: 2px; /* Padding inside the cards container */
 }
 
 /* Individual card styling */
@@ -140,7 +140,7 @@ table {
   font-weight: bold;
   color: #090808;
   text-align: center;
-  padding: 10px 0;
+  padding: 1px 0;
   margin-left: 20px;
   border-bottom: 2px solid #ccc;
   width: calc(100% - 40px);
@@ -160,8 +160,9 @@ table {
   height: calc(50vh - 10px); /* Subtracting the margin between the cards and messages */
   overflow-y: auto; /* Scrollbar appears if content overflows */
   border: 2px solid #ccc;
-  padding: 5px;
+  padding: 2px;
   //margin-top: 1%;
+  margin-right: 1%;
   margin-top: 10px;
   box-sizing: border-box; /* Include padding and border in the height calculation */
   direction: rtl; /* For right-to-left text direction */
@@ -180,11 +181,12 @@ table {
   background-color: rgb(222, 212, 241);
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 15px;
+  padding: 2px;
   margin: 5px 0;
   color: #090808;
-  font-weight: bold;
+  //font-weight: bold;
   text-align: right;
+  border: 1px solid rgb(17, 16, 16);
 }
 /* Responsive adjustments */
 @media (max-width: 768px) {
@@ -214,11 +216,11 @@ table {
   //background-color: rgb(222, 212, 241); /* Using the same purple shade as other parts */
   //border-radius: 10px; /* Consistent border radius as cards */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Consistent shadow as cards */
-  padding: 15px; /* Consistent padding as cards */
+  padding: 2px; /* Consistent padding as cards */
   margin: 10px 0; /* Consistent spacing as other elements */
   box-sizing: border-box; /* Box-sizing similar to other elements */
   direction: rtl; /* Right-to-left text direction */
-  margin-right: 1%;
+  
   overflow-y: auto; /* Scrollbar appears if content overflows */
   border: 2px solid #ccc;
   height: calc(100vh - 64px - 20px - 50vh - 50px); /* height of the viewport - header - padding - height of cards - margin */
@@ -229,7 +231,7 @@ table {
   font-weight: bold; /* Bold text as other titles */
   color: #090808; /* Consistent text color */
   text-align: center; /* Titles centered as other parts */
-  padding: 10px 0; /* Consistent padding */
+  padding: 1px 0; /* Consistent padding */
   margin: 0 20px; /* Consistent margin */
   border-bottom: 2px solid #ccc; /* Consistent border as other titles */
 }
@@ -246,12 +248,13 @@ table {
 }
 
 .links-list li {
-  flex: 0 0 16.66%; /* Each item takes up 16.66% of the container width */
-  max-width: 16.66%; /* Ensure the item does not grow larger than 16.66% */
+  flex: 0 0 20%; /* Each item takes up 16.66% of the container width */
+  max-width: 20%; /* Ensure the item does not grow larger than 16.66% */
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
   padding: 5px; /* Add some padding around each item */
   text-align: center; /* Center text in each item */
   margin-bottom: 10px; /* Add some margin below each item */
+  
 }
 
 .links-list li a {
@@ -260,7 +263,7 @@ table {
   color: #333; /* Color of the text */
   background-color: rgb(222, 212, 241);
     padding: 10px; /* Padding inside the link for spacing */
-  border: 1px solid #ddd; /* Border for the link */
+  border: 1px solid rgb(17, 16, 16); /* Border for the link */
   border-radius: 5px; /* Rounded corners for the link */
   transition: all 0.3s ease; /* Transition for interactive states */
 }
@@ -296,3 +299,5 @@ table {
     max-width: 100%;
   }
 }
+
+
