--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -31,16 +31,28 @@
                      
     </div>
   
-    <div class="important-messages" dir="rtl">
-      <h2 class="important-messages-title">הודעות חשובות</h2>
-      <div class="message">
-        <div *ngFor="let message of importantMessages" class="message">
-          <p class="message-title">Title: {{ message.messageTitle }}</p>
-          <p>{{ message.messageBody }}</p>
-          <!-- If you have a formatted date ready, you can add it here -->
-          <p class="message-date">{{ message.createTime | date: 'medium' }}</p>          </div>
+    <div class="important-messages-cards" dir="rtl">
+      <div class="messages-container">
+        <h2 class="important-messages-title">הודעות חשובות</h2>
+        <div class="message-cards-container">
+          <mat-card class="message-card" *ngFor="let message of importantMessages">
+            <mat-card-header>
+              <mat-card-title>{{ message.messageTitle }}</mat-card-title>
+              <mat-card-subtitle>{{ message.createTime | date: 'medium' }}</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+              <p>{{ message.messageBody }}</p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>פעולה 1</button>
+              <button mat-button>פעולה 2</button>
+            </mat-card-actions>
+          </mat-card>
+        </div>
+      </div>
     </div>
-  </div>
+    
+    
     </div>
     
     <div class="right-content">
