--- a/src/app/user-dashboard/user-dashboard.component.scss
+++ b/src/app/user-dashboard/user-dashboard.component.scss
@@ -69,13 +69,13 @@ table {
   margin: 20px auto;
 }
 
-.mat-row:nth-child(odd) {
-  background-color: white;
-}
+// .mat-row:nth-child(odd) {
+//   background-color: white;
+// }
 
-.mat-row:nth-child(even) {
-  background-color: rgb(222, 212, 241);
-}
+// .mat-row:nth-child(even) {
+//   background-color: rgb(222, 212, 241);
+// }
 
 .mat-row:hover {
   background-color: darkgray;
