--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -21,8 +21,15 @@
           <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
+        <mat-row *matRowDef="let row; columns: columns" 
+                 [ngClass]="{
+                   'priority-1': row.status === 'Not Started',
+                   'priority-3': row.status === 'In Progress',
+                   'priority-2': row.status === 'Completed'
+                 }" 
+                 class="mat-row"></mat-row>
       </mat-table>
+      
       <mat-paginator [length]="matTableDataSource.paginator?.length || 0"
                      [pageIndex]="matTableDataSource.paginator?.pageIndex"
                      [pageSize]="matTableDataSource.paginator?.pageSize"
