--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -26,8 +26,8 @@
               <ng-container *ngSwitchCase="'dueDate'">{{ element[column] | date:'dd/MM/yyyy HH:mm' }}</ng-container>
               <!-- Custom calculation and display for 'timeLeft' column -->
               <ng-container *ngSwitchCase="'timeLeft'">
-                <span [class.bold-font]="isLessThan25Hours(element.dueDate)">
-                  {{ getTimeLeft(element.dueDate) }}
+                <span [class.bold-font]="isLessThan25Hours(element.dueDate,element.status)">
+                  {{ getTimeLeft(element.dueDate,(element.status)) }} 
                 </span>
               </ng-container>
               
@@ -42,7 +42,7 @@
                    'priority-1': row.status === 'Not Started',
                    'priority-3': row.status === 'In Progress',
                    'priority-2': row.status === 'Completed',
-                   'bold-font': isLessThan25Hours(row.dueDate)
+                   'bold-font': isLessThan25Hours(row.dueDate,row.status)
                  }" 
                  class="mat-row"></mat-row>
       </mat-table>
