--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -227,13 +227,13 @@
             </a>
           </li>
           <li>
-            <a href="http://srv-sysaid/Home.jsp" target="_blank">sysaid </a>
+            <a href="http://srv-sysaid/HelpDesk.jsp?helpdeskfrm&fromId=IncidentsList&showAll=1&historyPage=Y" target="_blank">sysaid </a>
           </li>
           <li>
-            <a href="http://example.com/link2" target="_blank">קישור 3</a>
+            <a href="http://srv-apps-04:8080/#/mgmt/modifysingleuser?reportId=6008" target="_blank">AD </a>
           </li>
           <li>
-            <a href="http://example.com/link2" target="_blank">קישור 4</a>
+            <a href="http://localhost:4200/stazerim" target="_blank"> הרשאות לסטאזרים</a>
           </li>
           <li>
             <a href="http://example.com/link2" target="_blank">קישור 5</a>
