--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -236,10 +236,10 @@
             <a href="http://localhost:4200/stazerim" target="_blank"> הרשאות לסטאזרים</a>
           </li>
           <li>
-            <a href="http://example.com/link2" target="_blank">קישור 5</a>
+            <a href="https://innovation-tzmc.monday.com/boards/1335449086" target="_blank"> monday</a>
           </li>
           <li>
-            <a href="http://example.com/link2" target="_blank">קישור 6</a>
+            <a href="http://srv-profile/App/Portal/ChangeOrgUnit/OpenRequest.aspx" target="_blank"> אקספנדיון - העברת מחלקה</a>
           </li>
           <!-- Add more link items as needed -->
         </ul>
