--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -231,33 +231,33 @@
               <li>
                 <a
                   href="http://srv-apps-prod/app/#/employeesmanagedashboard"
-                  target="_blank"
+                  target="_blank" class="bold-link"
                   >ONNLINE
                 </a>
               </li>
               <li>
                 <a
                   href="http://srv-sysaid/HelpDesk.jsp?helpdeskfrm&fromId=IncidentsList&showAll=1&historyPage=Y"
-                  target="_blank"
+                  target="_blank" class="bold-link"
                   >sysaid
                 </a>
               </li>
               <li>
                 <a
                   href="http://srv-apps-04:8080/#/mgmt/modifysingleuser?reportId=6008"
-                  target="_blank"
+                  target="_blank" class="bold-link"
                   >AD
                 </a>
               </li>
               <li>
-                <a href="http://localhost:4200/stazerim" target="_blank">
+                <a href="http://localhost:4200/stazerim" target="_blank" class="bold-link">
                   הרשאות לסטאזרים</a
                 >
               </li>
               <li>
                 <a
                   href="https://innovation-tzmc.monday.com/boards/1335449086"
-                  target="_blank"
+                  target="_blank" class="bold-link"
                 >
                   monday</a
                 >
@@ -265,7 +265,7 @@
               <li>
                 <a
                   href="http://srv-profile/App/Portal/ChangeOrgUnit/OpenRequest.aspx"
-                  target="_blank"
+                  target="_blank" class="bold-link"
                 >
                   אקספנדיון - העברת מחלקה</a
                 >
@@ -273,7 +273,7 @@
               <li>
                 <a
                   href="http://srv-cp-inter:57772/csp/elad/EnsPortal.ProductionConfig.zen?PRODUCTION=Productions.Poria&$NAMESPACE=ELAD"
-                  target="_blank"
+                  target="_blank" class="bold-link"
                 >
                   אנסמבל
                 </a>
@@ -285,7 +285,10 @@
       </div>
     </div>
   </mat-tab>
+
   <mat-tab label="ניהול משימות">
+    <div class="content" dir="ltr">
+    <div class="left-content">
     <div class="tasks-table">
       <h2 class="table-title">משימות</h2>
         <!-- Add Task Button -->
@@ -346,6 +349,82 @@
         [pageSizeOptions]="[ 10, 20,50]"
       ></mat-paginator>
     </div>
+  </div>
+    <div class="right-content">
+    <div class="cards">
+      <h2 class="cards-title">מצב משימות</h2>
+      <!-- First row of cards -->
+      <div class="card">
+        <div class="card-title">קריאות פתוחות</div>
+        <div
+          class="card-value"
+          [ngClass]="
+            userData.open_calls > 0 ? 'card-value-red' : 'card-value-blue'
+          "
+        >
+          {{ userData.open_calls }}
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-title">המשך טיפול</div>
+        <div
+          class="card-value"
+          [ngClass]="{
+            'card-value-blue': userData.fallowUp_calls == '0',
+            'card-value-red': userData.fallowUp_calls != '0'
+          }"
+        >
+          {{ userData.followUp_calls }}
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-title">ממתין לתגובת המשתמש</div>
+        <div
+          class="card-value"
+          [ngClass]="{
+            'card-value-blue': userData.waiting_for_user_response == '0',
+            'card-value-red': userData.waiting_for_user_response != '0'
+          }"
+        >
+          {{ userData.waiting_for_user_response }}
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-title">בהמתנה</div>
+        <div
+          class="card-value"
+          [ngClass]="{
+            'card-value-blue': userData.on_hold == '0',
+            'card-value-red': userData.on_hold != '0'
+          }"
+        >
+          {{ userData.on_hold }}
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-title">קריאות סגורות- היום</div>
+
+        <div
+          class="card-value"
+          [ngClass]="{
+            'card-value-blue': userData.closed_today > 0,
+            'card-value-red': userData.closed_today <= 0
+          }"
+        >
+          {{ userData.closed_today }}
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-title">קריאות סגורות - החודש</div>
+        <div class="card-value [ngClass]= card-value-blue">
+          {{ userData.closed_this_month }}
+        </div>
+      </div>
+    </div>
+  </div>
+    </div>
+
   </mat-tab>
   <mat-tab label="ניהול הודעות"> Content 3 </mat-tab>
 </mat-tab-group>
